Package: psCBS
==============

Version: 0.7.7 [2010-09-26]
o Now postsegmentTCN() can process multiple chromosomes.


Version: 0.7.6 [2010-09-24]
o Added support to annotating and subsetting also by chromosomes,
  as well as appending segmentation results from different chromosomes
  together.


Version: 0.7.5 [2010-09-21]
o Added postsegmentTCN() for PairedPSCBS, which updates the 
  TCN segment start and ends, estimates and counts given the
  DH segments.


Version: 0.7.4 [2010-09-18]
o Added argument 'chromosome' to segmentByPairedPSCBS(), which, if given,
  adds a chromosome column to the data and segmentation results.
o BUG FIX: plot() for PairedPSCBS used a non-defined variable.


Version: 0.7.3 [2010-09-16]
o Added callABandHighAI() for calling paired PSCBS segmentation results.
o Added internal bootstrapping functions.


Version: 0.7.2 [2010-09-15]
o Added more methods for the PSCBS class.


Version: 0.7.1 [2010-09-08]
o Added more methods for the PSCBS class.
o Now segmentByPairedPSCBS() also returns the TumorBoost normalized data.


Version: 0.7.0 [2010-09-04]
o Updated segmentByPairedPSCBS() to provide two-step segmentation 
  from first segmenting the total copy numbers and then the
  decrease-of-heterozygosity signals.  Added utility functions for
  plotting the results.  The code for calling allelic imbalance
  and LOH is still to be added.


Version: 0.6.3 [2010-09-02]
o ROBUSTNESS: Now segmentByCBS() also works if there are no data points.


Version: 0.6.2 [2010-07-14]
o CLEAN UP: Added callNaiveHeterzygotes() which is a cleaned up
  version of findheterozygous().  Added an Rd example that asserts
  that the two are identical and compares the calls to those of
  aroma.light::callNaiveGenotypes().


Version: 0.6.1 [2010-07-09]
o Added low-level segmentByPairedPSCBS(), which runs paired PSCBS
  segmentation on a single sample and a single chromosome.
  It only segments; it does not call segments.  This is only